# cabal-relink-test

./: ChangeLog.md  README.md  cabal-relink-test.cabal
app/: Main.hs
src/: Mymodule.hs
